target/generated-sources/antlr3/lime/antlr3/LimeParser.java
// $ANTLR 3.4 lime\\antlr3\\LimeParser.g 2016-04-24 23:52:40


    package lime.antlr3;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;
import java.util.Map;
import java.util.HashMap;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class LimeParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "Action", "Add", "And", "Assert", "Assign", "Attr", "Begin", "Bool", "Booltype", "CBrace", "CBracket", "COMMENT", "CParen", "Class", "Colon", "Comma", "Divide", "Do", "Dot", "Else", "End", "Equals", "Excl", "GT", "GTEquals", "ID", "INT", "If", "Inherit", "Initialization", "Inttype", "LETTER", "LINE_COMMENT", "LT", "LTEquals", "Method", "Modulus", "Multiply", "NEquals", "New", "Null", "OBrace", "OBracket", "OParen", "Or", "Pow", "QMark", "Return", "SColon", "STRING", "Subtract", "Super", "Then", "This", "Var", "Voidtype", "WS", "When", "While", "ACTION", "ARG_DECL", "ASSIGN", "ATTR_DECL", "BLOCK", "CALL", "CLASS", "DOT", "ELIST", "EXPR", "FILE", "IF", "INHERIT", "INIT", "MEMBERS", "METHOD", "RETURN", "VAR_DECL", "WHILE"
    };

    public static final int EOF=-1;
    public static final int Action=4;
    public static final int Add=5;
    public static final int And=6;
    public static final int Assert=7;
    public static final int Assign=8;
    public static final int Attr=9;
    public static final int Begin=10;
    public static final int Bool=11;
    public static final int Booltype=12;
    public static final int CBrace=13;
    public static final int CBracket=14;
    public static final int COMMENT=15;
    public static final int CParen=16;
    public static final int Class=17;
    public static final int Colon=18;
    public static final int Comma=19;
    public static final int Divide=20;
    public static final int Do=21;
    public static final int Dot=22;
    public static final int Else=23;
    public static final int End=24;
    public static final int Equals=25;
    public static final int Excl=26;
    public static final int GT=27;
    public static final int GTEquals=28;
    public static final int ID=29;
    public static final int INT=30;
    public static final int If=31;
    public static final int Inherit=32;
    public static final int Initialization=33;
    public static final int Inttype=34;
    public static final int LETTER=35;
    public static final int LINE_COMMENT=36;
    public static final int LT=37;
    public static final int LTEquals=38;
    public static final int Method=39;
    public static final int Modulus=40;
    public static final int Multiply=41;
    public static final int NEquals=42;
    public static final int New=43;
    public static final int Null=44;
    public static final int OBrace=45;
    public static final int OBracket=46;
    public static final int OParen=47;
    public static final int Or=48;
    public static final int Pow=49;
    public static final int QMark=50;
    public static final int Return=51;
    public static final int SColon=52;
    public static final int STRING=53;
    public static final int Subtract=54;
    public static final int Super=55;
    public static final int Then=56;
    public static final int This=57;
    public static final int Var=58;
    public static final int Voidtype=59;
    public static final int WS=60;
    public static final int When=61;
    public static final int While=62;
    public static final int ACTION=63;
    public static final int ARG_DECL=64;
    public static final int ASSIGN=65;
    public static final int ATTR_DECL=66;
    public static final int BLOCK=67;
    public static final int CALL=68;
    public static final int CLASS=69;
    public static final int DOT=70;
    public static final int ELIST=71;
    public static final int EXPR=72;
    public static final int FILE=73;
    public static final int IF=74;
    public static final int INHERIT=75;
    public static final int INIT=76;
    public static final int MEMBERS=77;
    public static final int METHOD=78;
    public static final int RETURN=79;
    public static final int VAR_DECL=80;
    public static final int WHILE=81;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public LimeParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public LimeParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return LimeParser.tokenNames; }
    public String getGrammarFileName() { return "lime\\antlr3\\LimeParser.g"; }


    public static class compilationUnit_return extends ParserRuleReturnScope {
        LimeAST tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "compilationUnit"
    // lime\\antlr3\\LimeParser.g:21:1: compilationUnit : ( classDefinition )+ EOF -> ^( FILE ( classDefinition )+ ) ;
    public final LimeParser.compilationUnit_return compilationUnit() throws RecognitionException {
        LimeParser.compilationUnit_return retval = new LimeParser.compilationUnit_return();
        retval.start = input.LT(1);


        LimeAST root_0 = null;

        Token EOF2=null;
        LimeParser.classDefinition_return classDefinition1 =null;


        LimeAST EOF2_tree=null;
        RewriteRuleTokenStream stream_EOF=new RewriteRuleTokenStream(adaptor,"token EOF");
        RewriteRuleSubtreeStream stream_classDefinition=new RewriteRuleSubtreeStream(adaptor,"rule classDefinition");
        try {
            // lime\\antlr3\\LimeParser.g:22:5: ( ( classDefinition )+ EOF -> ^( FILE ( classDefinition )+ ) )
            // lime\\antlr3\\LimeParser.g:22:9: ( classDefinition )+ EOF
            {
            // lime\\antlr3\\LimeParser.g:22:9: ( classDefinition )+
            int cnt1=0;
            loop1:
            do {
                int alt1=2;
                switch ( input.LA(1) ) {
                case Class:
                    {
                    alt1=1;
                    }
                    break;

                }

                switch (alt1) {
            	case 1 :
            	    // lime\\antlr3\\LimeParser.g:22:11: classDefinition
            	    {
            	    pushFollow(FOLLOW_classDefinition_in_compilationUnit130);
            	    classDefinition1=classDefinition();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) stream_classDefinition.add(classDefinition1.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
            	    if (state.backtracking>0) {state.failed=true; return retval;}
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);


            EOF2=(Token)match(input,EOF,FOLLOW_EOF_in_compilationUnit135); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_EOF.add(EOF2);


            // AST REWRITE
            // elements: classDefinition
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {

            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (LimeAST)adaptor.nil();
            // 22:34: -> ^( FILE ( classDefinition )+ )
            {
                // lime\\antlr3\\LimeParser.g:22:37: ^( FILE ( classDefinition )+ )
                {
                LimeAST root_1 = (LimeAST)adaptor.nil();
                root_1 = (LimeAST)adaptor.becomeRoot(
                (LimeAST)adaptor.create(FILE, "FILE")
                , root_1);

                if ( !(stream_classDefinition.hasNext()) ) {
                    throw new RewriteEarlyExitException();
                }
                while ( stream_classDefinition.hasNext() ) {
                    adaptor.addChild(root_1, stream_classDefinition.nextTree());

                }
                stream_classDefinition.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;
            }

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (LimeAST)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (LimeAST)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "compilationUnit"


    public static class classDefinition_return extends ParserRuleReturnScope {
        LimeAST tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "classDefinition"
    // lime\\antlr3\\LimeParser.g:25:1: classDefinition : Class ID ( superClass )? OBrace ( classMember )+ CBrace -> ^( CLASS ID ( superClass )? ^( MEMBERS ( classMember )+ ) ) ;
    public final LimeParser.classDefinition_return classDefinition() throws RecognitionException {
        LimeParser.classDefinition_return retval = new LimeParser.classDefinition_return();
        retval.start = input.LT(1);


        LimeAST root_0 = null;

        Token Class3=null;
        Token ID4=null;
        Token OBrace6=null;
        Token CBrace8=null;
        LimeParser.superClass_return superClass5 =null;

        LimeParser.classMember_return classMember7 =null;


        LimeAST Class3_tree=null;
        LimeAST ID4_tree=null;
        LimeAST OBrace6_tree=null;
        LimeAST CBrace8_tree=null;
        RewriteRuleTokenStream stream_OBrace=new RewriteRuleTokenStream(adaptor,"token OBrace");
        RewriteRuleTokenStream stream_Class=new RewriteRuleTokenStream(adaptor,"token Class");
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleTokenStream stream_CBrace=new RewriteRuleTokenStream(adaptor,"token CBrace");
        RewriteRuleSubtreeStream stream_classMember=new RewriteRuleSubtreeStream(adaptor,"rule classMember");
        RewriteRuleSubtreeStream stream_superClass=new RewriteRuleSubtreeStream(adaptor,"rule superClass");
        try {
            // lime\\antlr3\\LimeParser.g:26:2: ( Class ID ( superClass )? OBrace ( classMember )+ CBrace -> ^( CLASS ID ( superClass )? ^( MEMBERS ( classMember )+ ) ) )
            // lime\\antlr3\\LimeParser.g:26:4: Class ID ( superClass )? OBrace ( classMember )+ CBrace
            {
            Class3=(Token)match(input,Class,FOLLOW_Class_in_classDefinition157); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_Class.add(Class3);


            ID4=(Token)match(input,ID,FOLLOW_ID_in_classDefinition159); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_ID.add(ID4);


            // lime\\antlr3\\LimeParser.g:26:13: ( superClass )?
            int alt2=2;
            switch ( input.LA(1) ) {
                case Inherit:
                    {
                    alt2=1;
                    }
                    break;
            }

            switch (alt2) {
                case 1 :
                    // lime\\antlr3\\LimeParser.g:26:13: superClass
                    {
                    pushFollow(FOLLOW_superClass_in_classDefinition161);
                    superClass5=superClass();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_superClass.add(superClass5.getTree());

                    }
                    break;

            }


            OBrace6=(Token)match(input,OBrace,FOLLOW_OBrace_in_classDefinition164); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_OBrace.add(OBrace6);


            // lime\\antlr3\\LimeParser.g:26:32: ( classMember )+
            int cnt3=0;
            loop3:
            do {
                int alt3=2;
                switch ( input.LA(1) ) {
                case Action:
                case Attr:
                case Initialization:
                case Method:
                    {
                    alt3=1;
                    }
                    break;

                }

                switch (alt3) {
            	case 1 :
            	    // lime\\antlr3\\LimeParser.g:26:32: classMember
            	    {
            	    pushFollow(FOLLOW_classMember_in_classDefinition166);
            	    classMember7=classMember();

            	    state._fsp--;
            	    if (state.failed) return retval;
            	    if ( state.backtracking==0 ) stream_classMember.add(classMember7.getTree());

            	    }
            	    break;

            	default :
            	    if ( cnt3 >= 1 ) break loop3;
            	    if (state.backtracking>0) {state.failed=true; return retval;}
                        EarlyExitException eee =
                            new EarlyExitException(3, input);
                        throw eee;
                }
                cnt3++;
            } while (true);


            CBrace8=(Token)match(input,CBrace,FOLLOW_CBrace_in_classDefinition169); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_CBrace.add(CBrace8);


            // AST REWRITE
            // elements: superClass, classMember, ID
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {

            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (LimeAST)adaptor.nil();
            // 27:3: -> ^( CLASS ID ( superClass )? ^( MEMBERS ( classMember )+ ) )
            {
                // lime\\antlr3\\LimeParser.g:27:6: ^( CLASS ID ( superClass )? ^( MEMBERS ( classMember )+ ) )
                {
                LimeAST root_1 = (LimeAST)adaptor.nil();
                root_1 = (LimeAST)adaptor.becomeRoot(
                (LimeAST)adaptor.create(CLASS, "CLASS")
                , root_1);

                adaptor.addChild(root_1, 
                stream_ID.nextNode()
                );

                // lime\\antlr3\\LimeParser.g:27:17: ( superClass )?
                if ( stream_superClass.hasNext() ) {
                    adaptor.addChild(root_1, stream_superClass.nextTree());

                }
                stream_superClass.reset();

                // lime\\antlr3\\LimeParser.g:27:29: ^( MEMBERS ( classMember )+ )
                {
                LimeAST root_2 = (LimeAST)adaptor.nil();
                root_2 = (LimeAST)adaptor.becomeRoot(
                (LimeAST)adaptor.create(MEMBERS, "MEMBERS")
                , root_2);

                if ( !(stream_classMember.hasNext()) ) {
                    throw new RewriteEarlyExitException();
                }
                while ( stream_classMember.hasNext() ) {
                    adaptor.addChild(root_2, stream_classMember.nextTree());

                }
                stream_classMember.reset();

                adaptor.addChild(root_1, root_2);
                }

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;
            }

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (LimeAST)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (LimeAST)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "classDefinition"


    public static class superClass_return extends ParserRuleReturnScope {
        LimeAST tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "superClass"
    // lime\\antlr3\\LimeParser.g:30:1: superClass : Inherit ID -> ^( INHERIT ID ) ;
    public final LimeParser.superClass_return superClass() throws RecognitionException {
        LimeParser.superClass_return retval = new LimeParser.superClass_return();
        retval.start = input.LT(1);


        LimeAST root_0 = null;

        Token Inherit9=null;
        Token ID10=null;

        LimeAST Inherit9_tree=null;
        LimeAST ID10_tree=null;
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleTokenStream stream_Inherit=new RewriteRuleTokenStream(adaptor,"token Inherit");

        try {
            // lime\\antlr3\\LimeParser.g:31:2: ( Inherit ID -> ^( INHERIT ID ) )
            // lime\\antlr3\\LimeParser.g:31:4: Inherit ID
            {
            Inherit9=(Token)match(input,Inherit,FOLLOW_Inherit_in_superClass206); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_Inherit.add(Inherit9);


            ID10=(Token)match(input,ID,FOLLOW_ID_in_superClass208); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_ID.add(ID10);


            // AST REWRITE
            // elements: ID
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {

            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (LimeAST)adaptor.nil();
            // 31:15: -> ^( INHERIT ID )
            {
                // lime\\antlr3\\LimeParser.g:31:18: ^( INHERIT ID )
                {
                LimeAST root_1 = (LimeAST)adaptor.nil();
                root_1 = (LimeAST)adaptor.becomeRoot(
                (LimeAST)adaptor.create(INHERIT, "INHERIT")
                , root_1);

                adaptor.addChild(root_1, 
                stream_ID.nextNode()
                );

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;
            }

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (LimeAST)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (LimeAST)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "superClass"


    public static class classMember_return extends ParserRuleReturnScope {
        LimeAST tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "classMember"
    // lime\\antlr3\\LimeParser.g:34:1: classMember : ( attrDeclaration | init | methodDeclaration | actionDeclaration );
    public final LimeParser.classMember_return classMember() throws RecognitionException {
        LimeParser.classMember_return retval = new LimeParser.classMember_return();
        retval.start = input.LT(1);


        LimeAST root_0 = null;

        LimeParser.attrDeclaration_return attrDeclaration11 =null;

        LimeParser.init_return init12 =null;

        LimeParser.methodDeclaration_return methodDeclaration13 =null;

        LimeParser.actionDeclaration_return actionDeclaration14 =null;



        try {
            // lime\\antlr3\\LimeParser.g:35:2: ( attrDeclaration | init | methodDeclaration | actionDeclaration )
            int alt4=4;
            switch ( input.LA(1) ) {
            case Attr:
                {
                alt4=1;
                }
                break;
            case Initialization:
                {
                alt4=2;
                }
                break;
            case Method:
                {
                alt4=3;
                }
                break;
            case Action:
                {
                alt4=4;
                }
                break;
            default:
                if (state.backtracking>0) {state.failed=true; return retval;}
                NoViableAltException nvae =
                    new NoViableAltException("", 4, 0, input);

                throw nvae;

            }

            switch (alt4) {
                case 1 :
                    // lime\\antlr3\\LimeParser.g:35:4: attrDeclaration
                    {
                    root_0 = (LimeAST)adaptor.nil();


                    pushFollow(FOLLOW_attrDeclaration_in_classMember227);
                    attrDeclaration11=attrDeclaration();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, attrDeclaration11.getTree());

                    }
                    break;
                case 2 :
                    // lime\\antlr3\\LimeParser.g:36:4: init
                    {
                    root_0 = (LimeAST)adaptor.nil();


                    pushFollow(FOLLOW_init_in_classMember232);
                    init12=init();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, init12.getTree());

                    }
                    break;
                case 3 :
                    // lime\\antlr3\\LimeParser.g:37:4: methodDeclaration
                    {
                    root_0 = (LimeAST)adaptor.nil();


                    pushFollow(FOLLOW_methodDeclaration_in_classMember237);
                    methodDeclaration13=methodDeclaration();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, methodDeclaration13.getTree());

                    }
                    break;
                case 4 :
                    // lime\\antlr3\\LimeParser.g:38:4: actionDeclaration
                    {
                    root_0 = (LimeAST)adaptor.nil();


                    pushFollow(FOLLOW_actionDeclaration_in_classMember242);
                    actionDeclaration14=actionDeclaration();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) adaptor.addChild(root_0, actionDeclaration14.getTree());

                    }
                    break;

            }
            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (LimeAST)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (LimeAST)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "classMember"


    public static class attrDeclaration_return extends ParserRuleReturnScope {
        LimeAST tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "attrDeclaration"
    // lime\\antlr3\\LimeParser.g:41:1: attrDeclaration : Attr type ID ( Assign expression )? -> ^( ATTR_DECL type ID ( expression )? ) ;
    public final LimeParser.attrDeclaration_return attrDeclaration() throws RecognitionException {
        LimeParser.attrDeclaration_return retval = new LimeParser.attrDeclaration_return();
        retval.start = input.LT(1);


        LimeAST root_0 = null;

        Token Attr15=null;
        Token ID17=null;
        Token Assign18=null;
        LimeParser.type_return type16 =null;

        LimeParser.expression_return expression19 =null;


        LimeAST Attr15_tree=null;
        LimeAST ID17_tree=null;
        LimeAST Assign18_tree=null;
        RewriteRuleTokenStream stream_Assign=new RewriteRuleTokenStream(adaptor,"token Assign");
        RewriteRuleTokenStream stream_ID=new RewriteRuleTokenStream(adaptor,"token ID");
        RewriteRuleTokenStream stream_Attr=new RewriteRuleTokenStream(adaptor,"token Attr");
        RewriteRuleSubtreeStream stream_expression=new RewriteRuleSubtreeStream(adaptor,"rule expression");
        RewriteRuleSubtreeStream stream_type=new RewriteRuleSubtreeStream(adaptor,"rule type");
        try {
            // lime\\antlr3\\LimeParser.g:42:2: ( Attr type ID ( Assign expression )? -> ^( ATTR_DECL type ID ( expression )? ) )
            // lime\\antlr3\\LimeParser.g:42:4: Attr type ID ( Assign expression )?
            {
            Attr15=(Token)match(input,Attr,FOLLOW_Attr_in_attrDeclaration254); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_Attr.add(Attr15);


            pushFollow(FOLLOW_type_in_attrDeclaration256);
            type16=type();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_type.add(type16.getTree());

            ID17=(Token)match(input,ID,FOLLOW_ID_in_attrDeclaration258); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_ID.add(ID17);


            // lime\\antlr3\\LimeParser.g:42:17: ( Assign expression )?
            int alt5=2;
            switch ( input.LA(1) ) {
                case Assign:
                    {
                    alt5=1;
                    }
                    break;
            }

            switch (alt5) {
                case 1 :
                    // lime\\antlr3\\LimeParser.g:42:18: Assign expression
                    {
                    Assign18=(Token)match(input,Assign,FOLLOW_Assign_in_attrDeclaration261); if (state.failed) return retval; 
                    if ( state.backtracking==0 ) stream_Assign.add(Assign18);


                    pushFollow(FOLLOW_expression_in_attrDeclaration263);
                    expression19=expression();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_expression.add(expression19.getTree());

                    }
                    break;

            }


            // AST REWRITE
            // elements: type, expression, ID
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {

            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (LimeAST)adaptor.nil();
            // 42:39: -> ^( ATTR_DECL type ID ( expression )? )
            {
                // lime\\antlr3\\LimeParser.g:42:42: ^( ATTR_DECL type ID ( expression )? )
                {
                LimeAST root_1 = (LimeAST)adaptor.nil();
                root_1 = (LimeAST)adaptor.becomeRoot(
                (LimeAST)adaptor.create(ATTR_DECL, "ATTR_DECL")
                , root_1);

                adaptor.addChild(root_1, stream_type.nextTree());

                adaptor.addChild(root_1, 
                stream_ID.nextNode()
                );

                // lime\\antlr3\\LimeParser.g:42:62: ( expression )?
                if ( stream_expression.hasNext() ) {
                    adaptor.addChild(root_1, stream_expression.nextTree());

                }
                stream_expression.reset();

                adaptor.addChild(root_0, root_1);
                }

            }


            retval.tree = root_0;
            }

            }

            retval.stop = input.LT(-1);


            if ( state.backtracking==0 ) {

            retval.tree = (LimeAST)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);
            }
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (LimeAST)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "attrDeclaration"


    public static class init_return extends ParserRuleReturnScope {
        LimeAST tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "init"
    // lime\\antlr3\\LimeParser.g:45:1: init : Initialization OParen ( formalParameters )? CParen block -> ^( INIT ( formalParameters )? block ) ;
    public final LimeParser.init_return init() throws RecognitionException {
        LimeParser.init_return retval = new LimeParser.init_return();
        retval.start = input.LT(1);


        LimeAST root_0 = null;

        Token Initialization20=null;
        Token OParen21=null;
        Token CParen23=null;
        LimeParser.formalParameters_return formalParameters22 =null;

        LimeParser.block_return block24 =null;


        LimeAST Initialization20_tree=null;
        LimeAST OParen21_tree=null;
        LimeAST CParen23_tree=null;
        RewriteRuleTokenStream stream_Initialization=new RewriteRuleTokenStream(adaptor,"token Initialization");
        RewriteRuleTokenStream stream_CParen=new RewriteRuleTokenStream(adaptor,"token CParen");
        RewriteRuleTokenStream stream_OParen=new RewriteRuleTokenStream(adaptor,"token OParen");
        RewriteRuleSubtreeStream stream_formalParameters=new RewriteRuleSubtreeStream(adaptor,"rule formalParameters");
        RewriteRuleSubtreeStream stream_block=new RewriteRuleSubtreeStream(adaptor,"rule block");
        try {
            // lime\\antlr3\\LimeParser.g:46:2: ( Initialization OParen ( formalParameters )? CParen block -> ^( INIT ( formalParameters )? block ) )
            // lime\\antlr3\\LimeParser.g:46:4: Initialization OParen ( formalParameters )? CParen block
            {
            Initialization20=(Token)match(input,Initialization,FOLLOW_Initialization_in_init291); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_Initialization.add(Initialization20);


            OParen21=(Token)match(input,OParen,FOLLOW_OParen_in_init293); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_OParen.add(OParen21);


            // lime\\antlr3\\LimeParser.g:46:26: ( formalParameters )?
            int alt6=2;
            switch ( input.LA(1) ) {
                case ID:
                case Inttype:
                case Voidtype:
                    {
                    alt6=1;
                    }
                    break;
            }

            switch (alt6) {
                case 1 :
                    // lime\\antlr3\\LimeParser.g:46:26: formalParameters
                    {
                    pushFollow(FOLLOW_formalParameters_in_init295);
                    formalParameters22=formalParameters();

                    state._fsp--;
                    if (state.failed) return retval;
                    if ( state.backtracking==0 ) stream_formalParameters.add(formalParameters22.getTree());

                    }
                    break;

            }


            CParen23=(Token)match(input,CParen,FOLLOW_CParen_in_init298); if (state.failed) return retval; 
            if ( state.backtracking==0 ) stream_CParen.add(CParen23);


            pushFollow(FOLLOW_block_in_init300);
            block24=block();

            state._fsp--;
            if (state.failed) return retval;
            if ( state.backtracking==0 ) stream_block.add(block24.getTree());

            // AST REWRITE
            // elements: formalParameters, block
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            if ( state.backtracking==0 ) {

            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (LimeAST)adaptor.nil();
            // 46:57: -> ^( INIT ( formalParameters )? block )
            {
                // lime\\antlr3\\LimeParser.g:46:59: ^( INIT ( formalParameters )? block )
                {
                LimeAST root_1 = (LimeAST)adaptor.nil();
                root_1 = (LimeAST)adaptor.becomeRoot(
                (LimeAST)adaptor.create(INIT, "INIT")
                , root_1);

                // lime\\antlr3\\LimeParser.g:46:66: ( formalParameters )?
                if ( stream_formalParameters.hasNext() ) {
                    adaptor.addChild(root_1, stream_formalParameters.nextTree());

                }
                stream_formalParameters.reset();

                adaptor.addChild(root_1, stream_block.nextTree());
